Imported Debian patch 2.4.0-5

--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Section: libs
 Maintainer: Debian Science Team <debian-science-maintainers@lists.alioth.debian.org>
 Uploaders: Christophe Trophime <christophe.trophime@lncmi.cnrs.fr>,
  Sylvestre Ledru <sylvestre@debian.org>
+DM-Upload-Allowed: yes
 Build-Depends: debhelper (>= 7), autotools-dev, cdbs, quilt, gfortran, 
  libblas-dev | libblas-3gf.so, liblapack-dev | liblapack-3gf.so,
  octave-pkg-dev (>= 0.7.0)
