--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,6 @@ include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 #LDFLAGS=$(shell dpkg-buildflags --get LDFLAGS)
 #CFLAGS+=$(HARDENING_CFLAGS)
 #LDFLAGS+=$(HARDENING_LDFLAGS)
-LDFLAGS+=-lblas -llapack -lm
 
 debusr := $(DEB_DESTDIR)usr
 debexp = debian/libsundials-serial-dev/usr/share/doc/libsundials-serial-dev/examples
@@ -29,7 +28,7 @@ DEB_DH_INSTALL_SOURCEDIR = $(DEB_DESTDIR)
 DEB_COMPRESS_EXCLUDE = .c .out .f
 
 USCAN_DESTDIR := $(CURDIR)/../tarballs
-
+DEB_STRIPPED_UPSTREAM_VERSION = $(shell echo $(DEB_UPSTREAM_VERSION) | sed -n -e 's/\.dfsg.*$$//p')
 
 # Get the appropriate paths for the installation of the Octave files
 mpath = $(shell octave-config -p LOCALFCNFILEDIR)
