--- a/examples/templates/cmakelists_parallel_C_ex.in
+++ b/examples/templates/cmakelists_parallel_C_ex.in
@@ -1,6 +1,6 @@
 # -----------------------------------------------------------------
-# $Revision: 4096 $
-# $Date: 2014-05-02 14:49:50 -0700 (Fri, 02 May 2014) $
+# $Revision: 4456 $
+# $Date: 2015-03-28 20:22:03 -0700 (Sat, 28 Mar 2015) $
 # -----------------------------------------------------------------
 # Programmer: Radu Serban @ LLNL
 # -----------------------------------------------------------------
@@ -30,6 +30,8 @@
 #
 # -----------------------------------------------------------------
 
+cmake_minimum_required(VERSION 2.8)
+
 # Specify project name
 PROJECT(@SOLVER@_parallel_examples C)
 
@@ -37,6 +39,9 @@ MARK_AS_ADVANCED(EXECUTABLE_OUTPUT_PATH LIBRARY_OUTPUT_PATH)
 
 # Set the names of the examples to be built
 SET(examples @EXAMPLES@)
+
+# Set names of examples specific dependency source files
+SET(examples_dependencies @EXAMPLES_DEPENDENCIES@)
 
 # Set name of MPI compiler to be used (CC or MPICC)
 SET(MPI_MPICC @MPICC@ CACHE STRING "MPICC compiler script")
@@ -78,6 +83,6 @@ ENDIF(LAPACK_LIBRARIES)
 
 # Build each example one by one
 FOREACH(example ${examples})
-  ADD_EXECUTABLE(${example} ${example}.c)
+  ADD_EXECUTABLE(${example} ${example}.c ${examples_dependencies})
   TARGET_LINK_LIBRARIES(${example} ${SUNDIALS_LIBS})
 ENDFOREACH(example ${examples})
