--- a/examples/templates/makefile_openmp_C_ex.in
+++ b/examples/templates/makefile_openmp_C_ex.in
@@ -1,6 +1,6 @@
 # -----------------------------------------------------------------
-# $Revision: 4161 $
-# $Date: 2014-07-11 12:40:21 -0700 (Fri, 11 Jul 2014) $
+# $Revision: 4456 $
+# $Date: 2015-03-28 20:22:03 -0700 (Sat, 28 Mar 2015) $
 # -----------------------------------------------------------------
 # Programmer: Steven Smith @ LLNL
 # -----------------------------------------------------------------
@@ -42,6 +42,8 @@ CFLAGS   = @CFLAGS@ @OpenMP_C_FLAGS@
 LDFLAGS  = @LDFLAGS@ @OpenMP_C_FLAGS@
 LIBS     = @LIBS@
 
+LINKFLAGS = -Wl,-rpath,@libdir@
+
 INCLUDES = -I${includedir}
 LIBRARIES = -l@SOLVER_LIB@ -lsundials_nvecopenmp ${LIBS}
 LIBRARIES_BL = @BLAS_LAPACK_LIBS@
@@ -49,8 +51,10 @@ LIBRARIES_SLUMT = @SUPERLUMT_LIBS@
 LIBRARIES_KLU = @KLU_LIBRARY@ @AMD_LIBRARY@ @COLAMD_LIBRARY@ @BTF_LIBRARY@
 
 EXAMPLES = @EXAMPLES@ @EXAMPLES_BL@
+EXAMPLES_DEPENDENCIES = @EXAMPLES_DEPENDENCIES@
 
 OBJECTS = ${EXAMPLES:=.o}
+OBJECTS_DEPENDENCIES = ${EXAMPLES_DEPENDENCIES:=.o}
 
 # -----------------------------------------------------------------------------------------
 
@@ -63,11 +67,14 @@ OBJECTS = ${EXAMPLES:=.o}
 
 all: ${OBJECTS}
 	@for i in ${EXAMPLES} ; do \
-	  echo "${CC} -o $${i} $${i}.o ${CFLAGS} ${LDFLAGS} ${INCLUDES} -L${libdir} ${LIBRARIES} ${LIBRARIES_BL} ${LIBRARIES_SLUMT} ${LIBRARIES_KLU}" ; \
-	  ${CC} -o $${i} $${i}.o ${CFLAGS} ${LDFLAGS} ${INCLUDES} -L${libdir} ${LIBRARIES} ${LIBRARIES_BL} ${LIBRARIES_SLUMT} ${LIBRARIES_KLU} ; \
+	  echo "${CC} -o $${i} $${i}.o ${OBJECTS_DEPENDENCIES} ${CFLAGS} ${LDFLAGS} ${INCLUDES} -L${libdir} ${LIBRARIES} ${LIBRARIES_BL} ${LIBRARIES_SLUMT} ${LIBRARIES_KLU} ${LINKFLAGS}" ; \
+	  ${CC} -o $${i} $${i}.o ${OBJECTS_DEPENDENCIES} ${CFLAGS} ${LDFLAGS} ${INCLUDES} -L${libdir} ${LIBRARIES} ${LIBRARIES_BL} ${LIBRARIES_SLUMT} ${LIBRARIES_KLU} ${LINKFLAGS} ; \
 	done
+	
+${OBJECTS}: ${OBJECTS_DEPENDENCIES}
 
 clean:
+	rm -f ${OBJECTS_DEPENDENCIES}
 	rm -f ${OBJECTS}
 	rm -f ${EXAMPLES}
 
