Fix library paths for multiarch
Gbp-Pq: Name Fix-library-paths-for-multiarch.patch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@
 
 # Require a fairly recent cmake version
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
 
 # Set CMake policy to allow examples to build
 if(COMMAND cmake_policy)
@@ -33,6 +33,10 @@ endif(COMMAND cmake_policy)
 # Project SUNDIALS (initially only C supported)
 
 PROJECT(sundials C)
+
+# Get correct build paths automatically
+
+INCLUDE(GNUInstallDirs)
 
 # Set some variables with info on the SUNDIALS project
 
